[gd_scene load_steps=20 format=2]

[ext_resource path="res://Word.tscn" type="PackedScene" id=1]
[ext_resource path="res://controls2.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://progressBar.png" type="Texture" id=4]
[ext_resource path="res://ProgressBar.gd" type="Script" id=5]
[ext_resource path="res://Inconsolata.otf" type="DynamicFontData" id=6]
[ext_resource path="res://controls1.png" type="Texture" id=7]
[ext_resource path="res://0Hearts.png" type="Texture" id=8]
[ext_resource path="res://1Hearts.png" type="Texture" id=9]
[ext_resource path="res://4Hearts.png" type="Texture" id=10]
[ext_resource path="res://2Hearts.png" type="Texture" id=11]
[ext_resource path="res://3Hearts.png" type="Texture" id=12]
[ext_resource path="res://video.webm" type="VideoStream" id=13]
[ext_resource path="res://sound.mp3" type="AudioStream" id=14]
[ext_resource path="res://VideoPlayer.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 90
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 279
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -86.0
margin_top = -136.0
margin_right = 2080.0
margin_bottom = 1309.0
color = Color( 0, 0, 0, 1 )

[node name="Word" parent="." instance=ExtResource( 1 )]

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="Word"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Title1" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -585.0
margin_top = -46.0
margin_right = 585.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "a WINGNUT FILMS-production"

[node name="Title2" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -832.5
margin_top = -48.5
margin_right = 832.5
margin_bottom = 48.5
custom_fonts/font = SubResource( 3 )
text = "The Lord of the Rings: The Two Towers"

[node name="BottomRect" type="ColorRect" parent="HUD"]
visible = false
margin_left = 1.0
margin_top = 897.0
margin_right = 1918.0
margin_bottom = 1080.0
color = Color( 0.423529, 0.423529, 0.423529, 1 )

[node name="ReadyLetter1" type="ColorRect" parent="HUD"]
visible = false
margin_left = 577.0
margin_top = 1001.0
margin_right = 628.0
margin_bottom = 1075.0
color = Color( 0.333333, 1, 0.333333, 1 )

[node name="AmmoLabel1" type="Label" parent="HUD"]
margin_left = -5.0
margin_top = 987.0
margin_right = 625.0
margin_bottom = 1079.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
align = 2

[node name="ProgressBar1" type="TextureProgress" parent="HUD"]
visible = false
margin_left = 1.0
margin_top = 897.0
margin_right = 744.0
margin_bottom = 997.0
rect_scale = Vector2( 0.844, 0.983 )
value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0, 0, 0, 1 )
tint_over = Color( 0, 0, 0, 0 )
tint_progress = Color( 0.992157, 0, 0, 1 )
script = ExtResource( 5 )

[node name="ReadyLetter2" type="ColorRect" parent="HUD"]
visible = false
margin_left = 1289.0
margin_top = 1001.0
margin_right = 1340.0
margin_bottom = 1075.0
color = Color( 0.333333, 0.333333, 1, 1 )

[node name="AmmoLabel2" type="Label" parent="HUD"]
margin_left = 1292.0
margin_top = 991.0
margin_right = 1922.0
margin_bottom = 1083.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )

[node name="ProgressBar2" type="TextureProgress" parent="HUD"]
visible = false
margin_left = 1918.0
margin_top = 897.0
margin_right = 2661.0
margin_bottom = 997.0
rect_scale = Vector2( -0.844, 0.983 )
value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0, 0, 0, 1 )
tint_over = Color( 0, 0, 0, 0 )
tint_progress = Color( 0.992157, 0, 0, 1 )
script = ExtResource( 5 )

[node name="LivesCounter1" type="Node2D" parent="HUD"]
visible = false
position = Vector2( 728, 980 )
scale = Vector2( 0.351313, 0.351313 )

[node name="4lives" type="Sprite" parent="HUD/LivesCounter1"]
texture = ExtResource( 10 )

[node name="3lives" type="Sprite" parent="HUD/LivesCounter1"]
visible = false
texture = ExtResource( 12 )

[node name="2lives" type="Sprite" parent="HUD/LivesCounter1"]
visible = false
texture = ExtResource( 11 )

[node name="1lives" type="Sprite" parent="HUD/LivesCounter1"]
visible = false
texture = ExtResource( 9 )

[node name="0lives" type="Sprite" parent="HUD/LivesCounter1"]
visible = false
texture = ExtResource( 8 )

[node name="VictoryLabel" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -980.0
margin_top = -141.5
margin_right = 980.0
margin_bottom = 141.5
custom_fonts/font = SubResource( 5 )
text = "Player 2 wins!"

[node name="LivesCounter2" type="Node2D" parent="HUD"]
visible = false
position = Vector2( 1192, 980 )
scale = Vector2( 0.351313, 0.351313 )

[node name="4lives" type="Sprite" parent="HUD/LivesCounter2"]
texture = ExtResource( 10 )

[node name="3lives" type="Sprite" parent="HUD/LivesCounter2"]
visible = false
texture = ExtResource( 12 )

[node name="2lives" type="Sprite" parent="HUD/LivesCounter2"]
visible = false
texture = ExtResource( 11 )

[node name="1lives" type="Sprite" parent="HUD/LivesCounter2"]
visible = false
texture = ExtResource( 9 )

[node name="0lives" type="Sprite" parent="HUD/LivesCounter2"]
visible = false
texture = ExtResource( 8 )

[node name="VideoPlayer" type="VideoPlayer" parent="HUD"]
margin_right = 1920.0
margin_bottom = 1080.0
stream = ExtResource( 13 )
autoplay = true
script = ExtResource( 15 )

[node name="Label" type="Label" parent="HUD/VideoPlayer"]
margin_right = 108.0
margin_bottom = 14.0
text = "Press esc to skip"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 14 )
volume_db = -5.244

[node name="Controls2" type="Node2D" parent="HUD"]
visible = false
position = Vector2( 1692, 293 )

[node name="Sprite" type="Sprite" parent="HUD/Controls2"]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="HUD/Controls2"]
margin_left = -121.0
margin_top = 54.0
margin_right = -52.0
margin_bottom = 68.0
text = "Movement"

[node name="Label3" type="Label" parent="HUD/Controls2"]
margin_left = -68.0
margin_top = -73.0
margin_right = 75.0
margin_bottom = -59.0
text = "Sucking up to 5 letters"

[node name="Label2" type="Label" parent="HUD/Controls2"]
margin_left = 36.0
margin_top = 54.0
margin_right = 137.0
margin_bottom = 68.0
text = "Shooting letters"

[node name="Label4" type="Label" parent="HUD/Controls2"]
margin_left = -104.0
margin_top = 81.0
margin_right = 113.0
margin_bottom = 95.0
text = "Stay on screen as long as you can!"

[node name="Controls1" type="Node2D" parent="HUD"]
visible = false
position = Vector2( 237, 286 )

[node name="Sprite" type="Sprite" parent="HUD/Controls1"]
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="HUD/Controls1"]
margin_left = -121.0
margin_top = 54.0
margin_right = -52.0
margin_bottom = 68.0
text = "Movement"

[node name="Label3" type="Label" parent="HUD/Controls1"]
margin_left = -74.0
margin_top = -66.0
margin_right = 69.0
margin_bottom = -52.0
text = "Sucking up to 5 letters"

[node name="Label2" type="Label" parent="HUD/Controls1"]
margin_left = 36.0
margin_top = 54.0
margin_right = 137.0
margin_bottom = 68.0
text = "Shooting letters"

[node name="Label4" type="Label" parent="HUD/Controls1"]
margin_left = -104.0
margin_top = 81.0
margin_right = 113.0
margin_bottom = 95.0
text = "Stay on screen as long as you can!"

[node name="LetterScrollTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="RespawnTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="DramaTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="screen_exited" from="Word/VisibilityNotifier" to="Word" method="_on_VisibilityNotifier_screen_exited"]
[connection signal="finished" from="HUD/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="timeout" from="LetterScrollTimer" to="." method="_on_LetterScrollTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="DramaTimer" to="." method="_on_DramaTimer_timeout"]
